--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Quiz Binatang</string>
+    <string name="Enter">Masuk</string>
+    <string name="editTextNameHint">Masukkan nama</string>
+    <string name="ok">OK</string>
 </resources>
